--- a/styles.css
+++ b/styles.css
@@ -6,20 +6,31 @@ body {
 .intro {
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
-    width: 500px;
+    width: 700px;
     height: 350px;
     border: 5px solid black;
-    padding: 50px;
+    padding: 60px;
     margin: 0 auto;
     margin-top: 50px;
 }
 
 .title {
-    padding: -20px;
+    padding: 0px;
     font-size: 40px;
+    margin-top: -30px;
 }
 
 .headerp {
     padding: 20px;
     font-size: 20px;
+    text-align: left;
+    margin-top: -35px;
+    width: 300px;
+    margin-left: -60px;
+}
+
+.pc-gif {
+    margin-left: 350px;
+    margin-bottom: -250px;
+    width: 350px;
 }
