--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color:lightpink;
+    background-color: #eca1a6;
 }
 
 
@@ -26,11 +26,16 @@ body {
     text-align: left;
     margin-top: -35px;
     width: 300px;
-    margin-left: -60px;
+    margin-left: -30px;
+    height: 255px;
 }
 
 .pc-gif {
     margin-left: 350px;
-    margin-bottom: -250px;
+    margin-bottom: -255px;
     width: 350px;
+}
+
+.sections {
+    margin-top: -520px;
 }
